crates/es-fluent-cli/tests/snapshots/cli_tests__tree__workspace__tree.snap
---
source: crates/es-fluent-cli/tests/cli_tests.rs
expression: run_tree_test(&WORKSPACE_CONFIG)
---
STDOUT:
Fluent FTL Tree
 test-app-a
 └─ en
    └─ test-app-a.ftl
       ├─ z_last
       ├─ hello_a
       ├─ orphan_key
       ├─ shared-Photos
       ├─ gender-Male
       ├─ gender-Female
       └─ gender-Other

 test-lib-b
 └─ en
    └─ test-lib-b.ftl
       └─ hello_b


STDERR:
